increase size of ability mods and prevent jumping on death saves

--- a/D&D_5e_Shaped/D&D_5e.css
+++ b/D&D_5e_Shaped/D&D_5e.css
@@ -168,7 +168,7 @@ div.sheet-overall-wrapper [class *= "sheet-npc-version"] {
 }
 .sheet-ability-score-wrapper .sheet-ability-modifier {
   font-weight: bold;
-  font-size: 120%;
+  font-size: 140%;
 }
 .sheet-ability-score-wrapper .sheet-ability-score {
   position: absolute;
@@ -450,6 +450,7 @@ input[type=number].sheet-no-spin {
 .sheet-death-save .sheet-checkbox-label [type="checkbox"] + span {
   background: white;
   border: 1px solid;
+  width: 17px;
   padding: 2px 4px;
   margin: 0;
 }
